--- a/src/components/ReusableComponent/DataTable/index.css
+++ b/src/components/ReusableComponent/DataTable/index.css
@@ -1,44 +1,98 @@
-.reusable-data-table{
+.reusable-lists-table{
     overflow: hidden;
 }
-.reusable-data-table .ant-table-container{
-    border: 1px solid #83b2f5;
+.reusable-lists-table .ant-table-container{
+    border: 1px solid rgb(243 243 247);
+    border-top: 1px solid #fff;
     border-radius: 6px;
     overflow: hidden;
 }
-.reusable-data-table .ant-table-thead .ant-table-cell{
-    padding: 8px  !important;
-    background-color: #bae0ff;
-    color: #7d7f97;
+
+/*** For Remove Header Border CSS ***/
+.reusable-lists-table .ant-table{
+    border-radius: 0px !important;
 }
-.reusable-data-table .ant-table-thead .ant-table-cell{
-    border: 1px solid #83b2f5;
+.reusable-lists-table .ant-table-header{
+    border-radius: 0px !important;
+}
+.reusable-lists-table .ant-table-tbody tr{
+    border: 1px solid grey !important;
+}
+.reusable-lists-table  .ant-table-container {
+    border-start-start-radius: 6px;
+    border-start-end-radius: 6px;
+}
+
+.reusable-lists-table .overflow-y-false .ant-table-body{
+    overflow-y: hidden !important;
+}
+
+
+.reusable-lists-table .ant-table-thead .ant-table-cell{
+    padding: 5px 8px  !important;
+    font-family: 'Titillium Web',sans-serif;
+    font-weight: 600;
+    font-size: 13px;
+    background-color: rgb(243 243 247);
+    color: #000;
+}
+.reusable-lists-table .ant-table-thead .ant-table-cell{
+    border: 1px solid #fff;
     border-right: none !important;
     border-top: none !important;
-    border-bottom: none !important;
+    /* border-bottom: none !important; */
 }
-.reusable-data-table .ant-table-thead .ant-table-cell:first-child{
+.reusable-lists-table .ant-table-thead .ant-table-cell:first-child{
     border-left: none !important;
 }
-.reusable-data-table .ant-table-tbody .ant-table-cell{
-    border: 1px solid #83b2f5;
+.reusable-lists-table .ant-table-tbody .ant-table-cell{
+    /* border: 1px solid #f0f5ff; */
     border-right: none !important;
     border-bottom: none !important;
 }
-.reusable-data-table .ant-table-tbody .ant-table-row .ant-table-cell:first-child{
+.reusable-lists-table .ant-table-tbody .ant-table-row .ant-table-cell:first-child{
     border-left: none !important;
 }
 
-.reusable-data-table .ant-table-tbody .ant-table-cell{
-    padding: 10px;
+.reusable-lists-table .ant-table-tbody .ant-table-cell{
+    font-family: 'Titillium Web',sans-serif;
+    font-weight: 600;
+    font-size: 12px;
+    padding: 6px 8px;
 }
-.reusable-data-table .ant-table-tbody .table-row-light .ant-table-cell{
-    background-color: #e6f4ff;
+.reusable-lists-table .ant-table-tbody .table-row-light .ant-table-cell{
+    background-color: rgb(243 243 247);
 }
 
 .ant-table-wrapper .ant-table-container table>thead>tr:first-child >*:first-child{
-    border-start-start-radius:6px  !important;
+    border-start-start-radius:0px  !important;
 }
 .ant-table-wrapper .ant-table-container table>thead>tr:first-child >*:last-child{
-    border-start-end-radius:6px !important;
+    border-start-end-radius:0px !important;
 }
+
+
+
+
+::-webkit-scrollbar {
+    width: 6px;
+    margin:3px;
+}
+  
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #c1c1c1; 
+    border-radius: 10px;
+}
+   
+
+::-webkit-scrollbar-thumb {
+    background: #c1c1c1; 
+    border-radius: 10px;
+}
+  
+
+::-webkit-scrollbar-thumb:hover {
+    background: #979292; 
+}
+
